[metadata]
name = viur_cli
version = attr: viur_cli.version.__version__
author = Andreas H. Kelch
author_email = ak@mausbrand.de
description = Command-line interface for ViUR application maintenance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-cli
project_urls =
    Bug Tracker = https://github.com/viur-framework/viur-cli/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    watchgod==0.7
    python-minifier==2.5.0
    app_server==0.7.2
    click==8.0.3
    pipfile-requirements==0.3.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viur = viur_cli:cli
    flare = viur_cli.scripts.flare:main
    get-pyodide = viur_cli.scripts.get_pyodide:main
