[metadata]
name = viur_cli
version = attr: viur_cli.version.__version__
author = Andreas H. Kelch
author_email = ak@mausbrand.de
description = Command-line interface for ViUR application maintenance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-cli
project_urls =
    Bug Tracker = https://github.com/viur-framework/viur-cli/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    watchgod==0.7
    python-minifier==2.9
    app_server==0.9.4
    click==8.1.3
    pipfile-requirements==0.3.0
    requests==2.31.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viur = viur_cli:cli
    viur-2to3 = viur_cli.scripts.viur_2to3:main
    flare = viur_cli.scripts.flare:main
    get-pyodide = viur_cli.scripts.get_pyodide:main
