[metadata]
name = viur_cli
version = attr: viur_cli.version.__version__
author = Andreas H. Kelch
author_email = ak@mausbrand.de
description = Command-line interface for ViUR application maintenance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-cli
project_urls =
    Bug Tracker = https://github.com/viur-framework/viur-cli/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    app_server~=1.0
    click~=8.1.7
    pipfile-requirements~=0.3
    requests~=2.0
    semver~=3.0
    watchdog~=6.0
    safety~=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viur = viur_cli:cli
    get-pyodide = viur_cli.scripts.get_pyodide:main
